--- a/wanxiang.dict.yaml
+++ b/wanxiang.dict.yaml
@@ -11,7 +11,7 @@
 ---
 name: wanxiang
 version: "LTS"
-sort: by_weight  #字典初始排序，可選original或by_weight
+sort: original  #字典初始排序，可選original或by_weight
 use_preset_vocabulary: false
 import_tables:
   - dicts/user_custom_noTone
@@ -23,4 +23,5 @@ import_tables:
   - dicts/duoyin        #兼容词库，是基础词库的扩充，收录了多场景多种读音的词组
   - dicts/shici         #诗词
   - dicts/diming        #地名
+  - flypydzfor932
 ...
